doing a little Python coding: tic_tac_toe.py
This is a crappy/lame implementation that will surely have to change.

But just taking a stab at it to get a taste for developing and testing python.

--- a/1.TicTacToe.ipynb
+++ b/1.TicTacToe.ipynb
@@ -28,6 +28,7 @@
     "    def get_initial_state(self):\n",
     "        return np.zeros((self.row_count, self.column_count), dtype=np.int8)\n",
     "\n",
+    "    # internal helper\n",
     "    def action_to_row_col(self, action):\n",
     "        \"\"\"turn action number into row and column\"\"\"\n",
     "        row    = action // self.column_count\n",
