--- a/1.TicTacToe.ipynb
+++ b/1.TicTacToe.ipynb
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1029,9 +1029,10 @@
     "\n",
     "args = {\n",
     "    'C': 2,\n",
-    "    'num_searches': 60,\n",
-    "    'num_iterations': 3,\n",
-    "    'num_selfPlay_iterations': 500,\n",
+    "    'num_iterations': 3,              # an iteration is: self-play, train on results, and save checkpoint\n",
+    "    'num_selfPlay_iterations': 500,   # self-play games per iteration\n",
+    "    'num_searches': 60,               # MCTS searches per move\n",
+    "    # training phase -- training on self-play data\n",
     "    'num_epochs': 4,\n",
     "    'batch_size': 64,\n",
     "}\n",
@@ -1291,6 +1292,127 @@
     "        break\n",
     "        \n",
     "    player = tictactoe.get_opponent(player)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "t = torch.tensor([\n",
+    "    [[0, 0, 0],[0, 0, 1]],\n",
+    "    [[1, 0, 1],[0, 0, 0]]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0, 0, 0],\n",
+       "         [0, 0, 0]],\n",
+       "\n",
+       "        [[0, 0, 0],\n",
+       "         [0, 0, 0]]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 2, 3])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 0, 0],\n",
+       "        [0, 0, 1]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0,  0,  0],\n",
+       "         [ 0,  0, -1]],\n",
+       "\n",
+       "        [[-1,  0, -1],\n",
+       "         [ 0,  0,  0]]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t * -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.get_num_interop_threads())  # Threads for inter-op parallelism\n",
+    "print(torch.get_num_threads())  # Threads for intra-op parallelism\n"
    ]
   },
   {
